--- a/TIM_DjProject/dashboard/templates/dashboard/Custom_Dashboard_Client.html
+++ b/TIM_DjProject/dashboard/templates/dashboard/Custom_Dashboard_Client.html
@@ -7,7 +7,7 @@
     <title>TIM Client Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/customize_map.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -55,15 +55,32 @@
     </div>
 </div>
 
-<!-- Map Container  -->
+<!-- Status bar Container  -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
-            <div id="map" style="height: 500px;"></div>
+        <div class="col-md-6">
+            <div id="status-bar" style="width: 500px;"></div>
         </div>
     </div>
 </div>
-<script src="{% static 'dashboard/customize_map.js' %}"></script>
+
+<!-- Table Showing Product Status -->
+<table class="table table-striped mt-4">
+    <thead>
+        <tr>
+            <th>Product Name</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for product in client_products %}
+        <tr>
+            <td>{{ product.name }}</td>
+            <td>{{ product.status }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
 </body>
 </html>
