--- a/TIM_DjProject/users/templates/users/login.html
+++ b/TIM_DjProject/users/templates/users/login.html
@@ -1,21 +1,46 @@
-{% extends "admin/login.html" %}
+{% load crispy_forms_tags %}
 
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TIM Client Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    
+</head>
+<body>
+    
+<div class="container-fluid mt-4">
+    <div class="row text-center">
+        <div class="col-md-12">
+            <h1 class="display-4">Welcome to <strong>TIM Client</strong></h1>
+            <p class="lead">Please Login to continue</p>
+        </div>
+    </div>
+</div>
+
 <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="card shadow-lg p-4" style="width: 400px;">
+    <div class="card shadow-lg p-4" style="width: 400px; margin-bottom: auto;">
         <h3 class="text-center mb-3">Login</h3>
         
         <form method="post">
             {% csrf_token %}
             
             <div class="mb-3">
-                <label class="form-label">Username</label>
-                {{ form.username }}
+                {{ form.username | as_crispy_field }}
+                {% if form.username.errors %}
+                    <div class="text-danger">{{ form.username.errors.0 }}</div>
+                {% endif %}
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Password</label>
-                {{ form.password }}
+                {{ form.password | as_crispy_field }}
+                {% if form.password.errors %}
+                    <div class="text-danger">{{ form.password.errors.0 }}</div>
+                {% endif %}
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Login</button>
@@ -26,4 +51,5 @@
         </div>
     </div>
 </div>
-{% endblock %}
+</body>
+</html>
