--- a/TIM_DjProject/users/templates/users/register.html
+++ b/TIM_DjProject/users/templates/users/register.html
@@ -1,7 +1,29 @@
-{% extends "admin/login.html" %}
 
-{% block content %}
-<div class="container d-flex justify-content-center align-items-center vh-100">
+
+{% load crispy_forms_tags %}
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TIM Client Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    
+    </head>
+<body>
+<div class="container-fluid mt-4">
+    <div class="row text-center">
+        <div class="col-md-12">
+            <h1 class="display-4">Welcome to <strong>TIM Client</strong></h1>
+            <p class="lead">Please register to continue</p>
+        </div>
+    </div>
+</div>
+<div class="container d-flex justify-content-center align-items-center vh-400">
     <div class="card shadow-lg p-4" style="width: 400px;">
         <h3 class="text-center mb-3">Register</h3>
 
@@ -10,8 +32,8 @@
             
             {% for field in form %}
             <div class="mb-3">
-                <label class="form-label">{{ field.label }}</label>
-                {{ field }}
+                <!--<label class="form-label">{{ field.label }}</label>-->
+                {{ field | as_crispy_field }}
                 {% if field.errors %}
                     <div class="text-danger">{{ field.errors.0 }}</div>
                 {% endif %}
@@ -26,4 +48,5 @@
         </div>
     </div>
 </div>
-{% endblock %}
+</body>
+
