--- a/TIM_DjProject/dashboard/templates/dashboard/delivery_history.html
+++ b/TIM_DjProject/dashboard/templates/dashboard/delivery_history.html
@@ -1,9 +1,5 @@
-{% extends "admin/base.html" %}
+{% extends "base.html" %}
 {% load static %}
-
-{% block sidebar %}
-   {% include "includes/sidebar.html" %}
-{% endblock %}
 
 {% block content %}
 
